// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Month renders 1`] = `
.pounce-14 {
  margin-bottom: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.pounce-0 {
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-112 {
  display: table-row-group;
}

.pounce-30 {
  -webkit-display: table-row;
  display: table-row;
}

.pounce-16 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
  cursor: default;
  pointer-events: none;
}

.pounce-16[aria-selected='true'],
.pounce-16[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-16:hover {
  background-color: #3e516b;
}

.pounce-28 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
}

.pounce-28[aria-selected='true'],
.pounce-28[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-28:hover {
  background-color: #3e516b;
}

<div>
  <div>
    <div
      class="pounce-14 pounce-15"
      role="row"
    >
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Monday"
        >
          Mo
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Tuesday"
        >
          Tu
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Wednesday"
        >
          We
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Thurdsday"
        >
          Th
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Friday"
        >
          Fr
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Saturday"
        >
          Sa
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Sunday"
        >
          Su
        </abbr>
      </div>
    </div>
  </div>
  <div
    class="pounce-112 pounce-113"
  >
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="false"
        aria-label="Su Nov 01 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        1
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 02 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        2
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 03 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        3
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 04 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        4
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 05 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        5
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 06 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        6
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 07 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        7
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 08 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        8
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 09 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        9
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 10 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        10
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 11 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        11
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 12 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        12
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 13 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        13
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 14 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        14
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 15 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        15
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 16 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        16
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 17 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        17
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 18 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        18
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 19 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        19
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 20 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        20
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 21 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        21
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 22 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        22
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 23 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        23
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 24 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        24
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 25 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        25
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 26 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        26
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 27 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        27
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 28 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        28
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 29 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        29
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 30 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        30
      </div>
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
    </div>
  </div>
</div>
`;

exports[`Month renders with a selected day 1`] = `
.pounce-14 {
  margin-bottom: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #3e516b;
  -webkit-box-pack: space-around;
  -ms-flex-pack: space-around;
  -webkit-justify-content: space-around;
  justify-content: space-around;
}

.pounce-0 {
  font-size: 0.75rem;
  font-weight: 700;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.pounce-112 {
  display: table-row-group;
}

.pounce-30 {
  -webkit-display: table-row;
  display: table-row;
}

.pounce-16 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
  cursor: default;
  pointer-events: none;
}

.pounce-16[aria-selected='true'],
.pounce-16[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-16:hover {
  background-color: #3e516b;
}

.pounce-28 {
  display: table-cell;
  padding: 8px;
  vertical-align: middle;
  text-align: center;
  cursor: pointer;
  border-radius: 50%;
}

.pounce-28[aria-selected='true'],
.pounce-28[aria-selected='true']:hover {
  background-color: #0081c5;
}

.pounce-28:hover {
  background-color: #3e516b;
}

<div>
  <div>
    <div
      class="pounce-14 pounce-15"
      role="row"
    >
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Monday"
        >
          Mo
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Tuesday"
        >
          Tu
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Wednesday"
        >
          We
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Thurdsday"
        >
          Th
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Friday"
        >
          Fr
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Saturday"
        >
          Sa
        </abbr>
      </div>
      <div
        role="columnheader"
      >
        <abbr
          class="pounce-0 pounce-1"
          title="Sunday"
        >
          Su
        </abbr>
      </div>
    </div>
  </div>
  <div
    class="pounce-112 pounce-113"
  >
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="false"
        aria-label="Su Nov 01 2020"
        aria-selected="true"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        1
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 02 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        2
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 03 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        3
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 04 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        4
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 05 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        5
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 06 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        6
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 07 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        7
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 08 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        8
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 09 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        9
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 10 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        10
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 11 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        11
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 12 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        12
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 13 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        13
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 14 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        14
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 15 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        15
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 16 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        16
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 17 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        17
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 18 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        18
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 19 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        19
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 20 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        20
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 21 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        21
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 22 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        22
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 23 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        23
      </div>
      <div
        aria-disabled="false"
        aria-label="Tu Nov 24 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        24
      </div>
      <div
        aria-disabled="false"
        aria-label="We Nov 25 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        25
      </div>
      <div
        aria-disabled="false"
        aria-label="Th Nov 26 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        26
      </div>
      <div
        aria-disabled="false"
        aria-label="Fr Nov 27 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        27
      </div>
      <div
        aria-disabled="false"
        aria-label="Sa Nov 28 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        28
      </div>
      <div
        aria-disabled="false"
        aria-label="Su Nov 29 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        29
      </div>
    </div>
    <div
      class="pounce-30 pounce-31"
    >
      <div
        aria-disabled="false"
        aria-label="Mo Nov 30 2020"
        aria-selected="false"
        class="pounce-28 pounce-29"
        role="gridcell"
      >
        30
      </div>
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
      <div
        aria-disabled="true"
        class="pounce-16 pounce-17"
      />
    </div>
  </div>
</div>
`;
